# libs-middle

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: airflow.yml  atualizar-docker-meteorologia.yml  atualizar-env-docker-airflow.yml  atualizar-env-middle.yml  atualizar-env.yml  su_env.yml
meteorologia/: produtos.py  utils.py
middle/: __init__.py  s3.py  utils.py
middle/airflow/: __init__.py  airflow_repository.py  context_handling.py  trigger_dag.py
middle/decomp/: __init__.py  atualiza_decomp.py  constants.py  dadger_input_generator.py  dadger_processor.py  decomp_ons_to_ccee.py  decomp_params.py  logger_config.py  patamar_processor.py
middle/message/: __init__.py  sender.py
middle/meteorologia/: plots.py  produtos.py  requirements.txt
middle/meteorologia/consts/: constants.py  namelist.py
middle/meteorologia/exemplos/: exemplo.py
middle/meteorologia/plots/: plots.py
middle/meteorologia/processamento/: pipelines.py  produtos.py
middle/meteorologia/utils/: utils.py
middle/prospec/: __init__.py  repository.py
middle/sensibilidades/carga/: __init__.py  gerar_carga.py
middle/sensibilidades/cvu/: __init__.py  _gerar_cvu_decomp.py  _gerar_cvu_newave.py  gerar_cvu.py
middle/utils/: __init__.py  _constants.py  auth.py  constants.py  dataframe.py  date_utils.py  download_deck_ccee.py  email.py  file_manipulation.py  html_generator copy.py  html_generator.py  html_to_image.py  logger.py  pdf.py  string.py
