[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "middle"
version = "0.1.0"
description = "Middle layer utilities for Raizen Power Trading applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Raizen Power Trading Team", email = "power-trading@raizen.com"},
]
keywords = ["raizen", "power-trading", "utilities", "middle-layer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/raizen/raizen-power-trading-libs-middle"
Repository = "https://github.com/raizen/raizen-power-trading-libs-middle"
Issues = "https://github.com/raizen/raizen-power-trading-libs-middle/issues"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
