[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "middle"
version = "1.3.3"
description = "Utilities for Trading applications"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Trading Middle", email = "middle@raizen.com"},
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/raizen/raizen-power-trading-libs-middle"
Repository = "https://github.com/raizen/raizen-power-trading-libs-middle"
Issues = "https://github.com/raizen/raizen-power-trading-libs-middle/issues"
